--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animate.css": "^3.7.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-reveal": "^1.2.2",
+    "react-router-dom": "^4.0.0",
+    "react-scripts": "2.1.1",
+    "react-slick": "^0.23.2"
   },
   "scripts": {
     "start": "react-scripts start",
