--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-reveal": "^1.2.2",
-    "react-router-dom": "^4.0.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
-    "react-slick": "^0.23.2"
+    "react-slick": "^0.23.2",
+    "react-transition-group": "^1.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
