--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-slick": "^0.23.2",
-    "react-transition-group": "^1.2.1"
+    "react-transition-group": "^1.2.1",
+    "url-to-deep-link": "^1.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
